<resources>
    <string name="app_name">TahaArican-odev1</string>
    <string name="foodninja">FoodNinja</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="image">image</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="find_your_favorite_food">Find Your Favorite Food</string>
    <string name="notification">notification</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="view_more">View More</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="metin_giriniz">Metin giriniz</string>
    <string name="home">Home</string>
    <string name="vegan_resto">Vegan Resto</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="_8_mins">8 Mins</string>
    <string name="_12_mins">12 Mins</string>
</resources>